--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,24 @@
-# The Docker image that will be used to build your app
-image: python:alpine3.19
-# Functions that should be executed before the build script is run
+image: python:3.8-buster
+
 before_script:
   - pip install mkdocs
-pages:
+
+test:
+  stage: test
   script:
-    # - export IP=`ip -br -c a | tail -n 1 | cut -d / -f 1 | awk '{print $3}'`
-    # - echo $IP
-    - hostname -i
-    - ip addr show
-    # - mkdocs build --verbose --clean
-    # - mkdocs serve $IP:80
+    - mkdocs build --strict --verbose --site-dir test
+  artifacts:
+    paths:
+      - test
+  rules:
+    - if: $CI_COMMIT_REF_NAME != $CI_DEFAULT_BRANCH
+
+pages:
+  stage: deploy
+  script:
+    - mkdocs build --strict --verbose
   artifacts:
     paths:
       - public
-  only:
-    - master
+  rules:
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
