--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
 pages:
   stage: deploy
   script:
-    - mkdocs build --strict --verbose
+    - mkdocs build --verbose
   artifacts:
     paths:
       - public
