--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
 test:
   stage: test
   script:
-    - mkdocs build --strict --verbose --site-dir test
+    - mkdocs build --no-strict --verbose --site-dir test
   artifacts:
     paths:
       - test
@@ -16,7 +16,7 @@ test:
 pages:
   stage: deploy
   script:
-    - mkdocs build --verbose
+    - mkdocs build --no-strict --verbose
   artifacts:
     paths:
       - public
