--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ pages:
   stage: deploy
   script:
     - mkdocs build --no-strict --verbose
+    - ls -lthr
   artifacts:
     paths:
       - public
