--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 ---
 site_name: Mehrdad's Docs Stack
-site_url: https://pages.gitlab.io/mkdocs
+site_url: https://mehrdad-docs.gitlab.io/docstack
 # site_url: https://www.geekfa.net/
 site_description: My all project documentation in MD format.
 site_author: Mehrdad Qasemkhani
