--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,71 +10,18 @@ repo_url: https://gitlab.com/mehrdad-docs/docstack
 edit_uri: blob/master/docs/
 
 theme:
-  name: mkdocs
-  locale: en
-  analytics: { gtag: "G-274394082" }
-  highlightjs: true
-  hljs_languages:
-    - yaml
-    - python
-    - rust
+  name: material
+  # features:
+  #   - navigation.tabs
+  icon:
+    logo: "material/cloud-outline"
+  favicon: "img/logo-notext.svg"
+  palette:
+    scheme: slate
+    primary: "teal"
+    accent: "green"
 
-nav:
-  - Code: dev/index.md
-  - DevOps: ops/index.md
-  - OS: os/index.md
-  - Database: db/index.md
-  - Network: net/index.md
-  - About:
-      - Me: about/me.md
-      - Help: about/help.md
+extra_css: [extra.css]
 
-extra_css:
-  - css/extra.css
-
-exclude_docs: |
-  *.py
-  *.rs
-
-# markdown_extensions:
-#   - toc:
-#       permalink: 
-#   - attr_list
-#   - def_list
-#   - tables
-#   - pymdownx.highlight:
-#       use_pygments: false
-#   - pymdownx.snippets
-#   - pymdownx.superfences
-#   - callouts
-#   - mdx_gh_links:
-#       user: mkdocs
-#       repo: mkdocs
-#   - mkdocs-click
-
-# hooks:
-#   - docs/hooks.py
-
-# plugins:
-#   - search
-#   - redirects:
-#       redirect_maps:
-#         user-guide/plugins.md: dev-guide/plugins.md
-#         user-guide/custom-themes.md: dev-guide/themes.md
-#         user-guide/styling-your-docs.md: user-guide/choosing-your-theme.md
-#   - autorefs
-#   - literate-nav:
-#       nav_file: README.md
-#       implicit_index: true
-#   - mkdocstrings:
-#       handlers:
-#         python:
-#           options:
-#             docstring_section_style: list
-#             members_order: source
-#             show_root_heading: true
-#             show_source: false
-#             show_signature_annotations: true
-
-# watch:
-#   - mkdocs
+plugins:
+  - search
