--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,11 +21,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          sparse-checkout: |
-            docs
-            includes
-            material/overrides
-            src/templates/partials/languages
+        #   sparse-checkout: |
+        #     docs
+        #     includes
+        #     material/overrides
+        #     src/templates/partials/languages
 
       - name: Set up Python runtime
         uses: actions/setup-python@v5
