Update python install req packgs

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -50,8 +50,9 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install mkdocs-material
-          pip install .[recommended,git,imaging]
-
+          pip install -r requirements.txt
+        #   pip install .[recommended,git,imaging]
+        
       - name: Install Insiders build
         if: github.event.repository.fork == false
         env:
