--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -52,7 +52,7 @@ jobs:
           pip install mkdocs-material
           pip install -r requirements.txt
         #   pip install .[recommended,git,imaging]
-        
+
       - name: Install Insiders build
         if: github.event.repository.fork == false
         env:
@@ -62,7 +62,7 @@ jobs:
           # CI! We have to do it this way in order to allow for overrides on our
           # own documentation, but you should stick to the method we recommend
           # in the publishing guide – see https://bit.ly/3zjdJtw
-          git clone --depth 1 https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material.git
+          git clone --depth 1 git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material.git
           pip install -e mkdocs-material-insiders
           cp mkdocs-material-insiders/mkdocs.yml mkdocs.yml
           # echo 'extra_javascript: [${{ vars.CHAT_CLIENT_URL }}]' >> mkdocs.yml
