--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -74,7 +74,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GOOGLE_ANALYTICS_KEY: ${{ secrets.GOOGLE_ANALYTICS_KEY }}
         run: |
-          mkdocs build --clean
+          mkdocs build --clean --site-dir site
           mkdocs --version
 
       - name: Adjust permissions
