--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ extra_css: [extra.css]
 
 # Plugins
 plugins:
+  - glightbox
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
 
@@ -71,7 +72,8 @@ theme:
         name: Switch to system preference
   font:
     text: Roboto
-    code: Roboto Mono
+    code: Fira Code
+    # code: Roboto Mono
   favicon: assets/favicon.png
   icon:
     logo: logo
