update config links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,14 @@
 ---
 # Project information
 site_name: Mehrdad's Docs Stack
-site_url: https://mehrdad-drpc.github.io/docstack
+site_url: https://mehrdad-drpc.github.io/docs
 # site_url: https://www.geekfa.net/
 site_description: My all project documentation in MD format.
 site_author: Mehrdad Qasemkhani
 site_dir: public
 
 # Repository
-repo_url: https://github.com/mehrdad-drpc/docstack
+repo_url: https://github.com/mehrdad-drpc/docs
 edit_uri: blob/master/docs/
 
 extra_css: [extra.css]
@@ -126,7 +126,7 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
-  
+
 # nav:
 # - Home:
 #     - index.md
