Change pip packages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
 pages:
   stage: deploy
   script:
-    - mkdocs build --no-strict --verbose
+    - mkdocs build --no-strict --quiet
     - ls -lthr
     - ls ./public -lthr
   artifacts:
