--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -44,8 +44,9 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          pip install mkdocs-material
-          pip install mkdocs-glightbox
+          # pip install mkdocs-material
+          # pip install .[recommended,git,imaging]
+          # pip install mkdocs-glightbox
           pip install -r requirements.txt
 
       - name: Build documentation
