--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           # pip install mkdocs-material
-          # pip install .[recommended,git,imaging]
           # pip install mkdocs-glightbox
+          pip install .[recommended,git,imaging]
           pip install -r requirements.txt
 
       - name: Build documentation
