--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ site_author: Mehrdad Qasemkhani
 site_dir: public
 
 # Repository
-repo_url: https://github.com/mehrdadq8i/docs
+repo_url: https://github.com/mhrdq8i/docs
 edit_uri: blob/master/docs/
 
 extra_css: [extra.css]
@@ -85,11 +85,11 @@ extra:
     deprecated: Deprecated
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/mehrdadq8i
+      link: https://github.com/mhrdq8i
     - icon: fontawesome/brands/youtube
       link: https://youtube.com/@geekfa
     - icon: fontawesome/brands/twitter
-      link: https://twitter.com/mehrdadq8i
+      link: https://twitter.com/mhrdq8i
 
 # Extensions
 markdown_extensions:
