Two Main Changes
- Remove git pics
- Renormalize old files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
         "Kustomize"
-    ]
+    ],
+    "files.autoSave": "afterDelay",
+    "files.insertFinalNewline": true
 }
