--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,21 @@
     "files.insertFinalNewline": true,
     "editor.fontFamily": "'JetbrainsMono NF Light', 'SauceCodePro Nerd Font Mono', 'Mononoki Nerd Font Mono'",
     "editor.fontSize": 14,
-    "terminal.integrated.fontFamily": "'Mononoki Nerd Font Mono'",
-    "terminal.integrated.fontSize": 13
+    "terminal.integrated.fontFamily": "'JetBrainsMonoNL NF Light'",
+    "terminal.integrated.fontSize": 12,
+    "accessibility.signals.terminalBell": {
+        "sound": "off",
+        "announcement": "off"
+    },
+    "terminal.integrated.defaultProfile.windows": "PowerShell_7",
+    "terminal.integrated.profiles.windows": {
+        "PowerShell_7": {
+            "path": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
+            "icon": "terminal-powershell"
+        },
+    },
+    "terminal.integrated.cursorStyle": "line",
+    "terminal.integrated.cursorStyleInactive": "underline",
+    "terminal.integrated.cursorWidth": 2,
+    "markdown.preview.fontFamily": "'Hack Nerd Font', -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
 }
