--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ theme:
     # - navigation.top
     # - navigation.tracking
     - search.highlight
-    # - search.share
+    - search.share
     - search.suggest
     - toc.follow
     # - toc.integrate
