--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,8 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+  - pymdownx.tabbed:
+      alternate_style: true
 # nav:
 # - Home:
 #     - index.md
