--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,11 +127,13 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
-  - pymdownx.superfences
+  - pymdownx.- pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
   - pymdownx.tabbed:
       alternate_style: true
       combine_header_slug: true
-
 # nav:
 # - Home:
 #     - index.md
