--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "docker.environment": {
+        "DOCKER_HOST": "tcp://172.16.2.2:2375"
+    },
     "cSpell.words": [
         "Kompose",
         "Kustomize"
