Fix git rebase image link address

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,87 @@
 {
-    "docker.environment": {
-        "DOCKER_HOST": "tcp://172.16.2.2:2375"
-    },
-    "cSpell.words": [
-        "Kompose",
-        "Kustomize"
-    ],
-    "files.autoSave": "afterDelay",
-    "files.insertFinalNewline": true,
-    "editor.fontFamily": "'JetbrainsMono NF Light', 'SauceCodePro Nerd Font Mono', 'Mononoki Nerd Font Mono'",
-    "editor.fontSize": 14,
-    "terminal.integrated.fontFamily": "'JetBrainsMonoNL NF Light'",
-    "terminal.integrated.fontSize": 12,
-    "accessibility.signals.terminalBell": {
-        "sound": "off",
-        "announcement": "off"
-    },
-    "terminal.integrated.defaultProfile.windows": "PowerShell_7",
-    "terminal.integrated.profiles.windows": {
-        "PowerShell_7": {
-            "path": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
-            "icon": "terminal-powershell"
-        },
-    },
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.cursorStyleInactive": "underline",
-    "terminal.integrated.cursorWidth": 2,
-    "markdown.preview.fontFamily": "-apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
+  "docker.environment": {
+    "DOCKER_HOST": "tcp://172.16.2.2:2375"
+  },
+  "cSpell.words": [
+    "Kompose",
+    "Kustomize"
+  ],
+  "files.autoSave": "afterDelay",
+  "files.insertFinalNewline": true,
+  "editor.fontFamily": "'JetbrainsMono NF Light', 'SauceCodePro Nerd Font Mono', 'Mononoki Nerd Font Mono'",
+  "editor.fontSize": 14,
+  "terminal.integrated.fontFamily": "'JetBrainsMonoNL NF Light'",
+  "terminal.integrated.fontSize": 12,
+  "accessibility.signals.terminalBell": {
+    "sound": "off",
+    "announcement": "off"
+  },
+  "terminal.integrated.defaultProfile.windows": "PowerShell_7",
+  "terminal.integrated.profiles.windows": {
+    "PowerShell_7": {
+      "path": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
+      "icon": "terminal-powershell"
+    }
+  },
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.cursorStyleInactive": "underline",
+  "terminal.integrated.cursorWidth": 2,
+  "markdown.preview.fontFamily": "-apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif",
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
+  "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Auxiliary/Build/vcvarsall.bat",
+  "C_Cpp_Runner.useMsvc": false,
+  "C_Cpp_Runner.warnings": [
+    "-Wall",
+    "-Wextra",
+    "-Wpedantic",
+    "-Wshadow",
+    "-Wformat=2",
+    "-Wcast-align",
+    "-Wconversion",
+    "-Wsign-conversion",
+    "-Wnull-dereference"
+  ],
+  "C_Cpp_Runner.msvcWarnings": [
+    "/W4",
+    "/permissive-",
+    "/w14242",
+    "/w14287",
+    "/w14296",
+    "/w14311",
+    "/w14826",
+    "/w44062",
+    "/w44242",
+    "/w14905",
+    "/w14906",
+    "/w14263",
+    "/w44265",
+    "/w14928"
+  ],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.includePaths": [],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
+  "C_Cpp_Runner.excludeSearch": [
+    "**/build",
+    "**/build/**",
+    "**/.*",
+    "**/.*/**",
+    "**/.vscode",
+    "**/.vscode/**"
+  ],
+  "C_Cpp_Runner.useAddressSanitizer": false,
+  "C_Cpp_Runner.useUndefinedSanitizer": false,
+  "C_Cpp_Runner.useLeakSanitizer": false,
+  "C_Cpp_Runner.showCompilationTime": false,
+  "C_Cpp_Runner.useLinkTimeOptimization": false,
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
