Edit K8S in pic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,14 @@
     "apiserver",
     "bpcopy",
     "genpkey",
+    "helmchart",
     "Kompose",
     "Kustomize",
     "ldconfig",
     "libname",
     "linenumber",
     "MTTR",
+    "trafficrouting",
     "xclip"
   ],
   "files.autoSave": "afterDelay",
