Update docker interview file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
     "addext",
     "apiserver",
     "bpcopy",
+    "BUILDKIT",
+    "Buildx",
+    "containerd",
+    "distroless",
+    "Frontends",
     "genpkey",
     "helmchart",
     "Kompose",
@@ -10,7 +15,10 @@
     "ldconfig",
     "libname",
     "linenumber",
+    "Macvlan",
     "MTTR",
+    "myimage",
+    "myrepo",
     "trafficrouting",
     "xclip"
   ],
