Add netshoot deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,8 @@
     "MTTR",
     "myimage",
     "myrepo",
+    "Netshoot",
+    "nsenter",
     "serviceaccount",
     "trafficrouting",
     "xclip"
