--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,20 @@
     "addext",
     "apiserver",
     "AUFS",
+    "Blackbox",
     "bpcopy",
+    "Buildah",
     "BUILDKIT",
     "Buildx",
     "clusterrole",
     "clusterrolebinding",
     "containerd",
+    "Containerfile",
+    "Containerfiles",
     "distroless",
     "Frontends",
     "genpkey",
+    "Greylog",
     "helmchart",
     "Kompose",
     "Kustomize",
@@ -25,7 +30,10 @@
     "myrepo",
     "Netshoot",
     "nsenter",
+    "promtail",
     "serviceaccount",
+    "syslogd",
+    "TOTP",
     "trafficrouting",
     "xclip"
   ],
